--- a/src/main/resources/org/devctr/todo/fxml/board.fxml
+++ b/src/main/resources/org/devctr/todo/fxml/board.fxml
@@ -1,14 +1,128 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.geometry.Rectangle2D?>
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="org.devctr.todo.Controller.TaskController"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane id="body" prefHeight="780.0" prefWidth="1280.0" stylesheets="@../css/styles.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.devctr.todo.Controller.TaskController">
+   <children>
+      <VBox alignment="TOP_CENTER" layoutY="62.0" prefHeight="657.0" prefWidth="222.0" styleClass="lateral-menu" />
+      <VBox layoutX="254.0" layoutY="62.0" prefHeight="120.0" prefWidth="983.0" spacing="10.0">
+         <children>
+            <Label text="Views Options">
+               <font>
+                  <Font name="System Bold" size="16.0" />
+               </font>
+            </Label>
+            <HBox alignment="CENTER_LEFT" prefHeight="44.0" prefWidth="973.0" spacing="10.0" style="-fx-background-color: white; -fx-background-radius: 8;">
+               <padding>
+                  <Insets bottom="5.0" left="8.0" right="8.0" top="5.0" />
+               </padding>
+               <children>
+                  <Button mnemonicParsing="false" prefHeight="15.0" prefWidth="60.0" styleClass="options-buttons" text="List">
+                     <font>
+                        <Font size="12.0" />
+                     </font>
+                  </Button>
+                  <Button mnemonicParsing="false" prefHeight="15.0" prefWidth="60.0" styleClass="options-buttons" text="Board">
+                     <font>
+                        <Font size="12.0" />
+                     </font>
+                  </Button>
+               </children>
+            </HBox>
+         </children>
+         <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </padding>
+      </VBox>
+      <Label alignment="CENTER" layoutX="254.0" layoutY="203.0" prefHeight="16.0" prefWidth="280.0" text="New Tasks" textAlignment="CENTER">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Label>
+      <Button fx:id="add_button" layoutX="254.0" layoutY="229.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="280.0" styleClass="add-button">
+         <font>
+            <Font size="10.0" />
+         </font>
+         <graphic>
+            <ImageView fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/button-add.png" />
+               </image>
+               <viewport>
+                  <Rectangle2D />
+               </viewport>
+            </ImageView>
+         </graphic>
+         <cursor>
+            <Cursor fx:constant="DEFAULT" />
+         </cursor>
+      </Button>
+      <VBox fx:id="doingVbox" layoutX="589.0" layoutY="274.0" prefHeight="200.0" prefWidth="280.0" spacing="16.0" />
+      <VBox fx:id="doneVbox" layoutX="930.0" layoutY="274.0" prefHeight="200.0" prefWidth="280.0" spacing="16.0" />
+      <Label alignment="CENTER" layoutX="589.0" layoutY="203.0" prefHeight="16.0" prefWidth="280.0" text="In Progress" textAlignment="CENTER">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Label>
+      <Button fx:id="add_button_progress" layoutX="589.0" layoutY="229.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="280.0" styleClass="add-button">
+         <font>
+            <Font size="10.0" />
+         </font>
+         <graphic>
+            <ImageView fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/button-add.png" />
+               </image>
+               <viewport>
+                  <Rectangle2D />
+               </viewport>
+            </ImageView>
+         </graphic>
+         <cursor>
+            <Cursor fx:constant="DEFAULT" />
+         </cursor>
+      </Button>
+      <Label alignment="CENTER" layoutX="930.0" layoutY="203.0" prefHeight="16.0" prefWidth="280.0" text="In Progress" textAlignment="CENTER">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Label>
+      <Button fx:id="add_button_complete" layoutX="930.0" layoutY="229.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="280.0" styleClass="add-button">
+         <font>
+            <Font size="10.0" />
+         </font>
+         <graphic>
+            <ImageView fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/button-add.png" />
+               </image>
+               <viewport>
+                  <Rectangle2D />
+               </viewport>
+            </ImageView>
+         </graphic>
+         <cursor>
+            <Cursor fx:constant="DEFAULT" />
+         </cursor>
+      </Button>
+      <ScrollPane layoutX="245.0" layoutY="274.0" prefHeight="447.0" prefWidth="289.0" style="-fx-background-color: none; -fx-border-color: none;">
+         <content>
+            <VBox fx:id="todoVbox" prefHeight="200.0" prefWidth="260.0" spacing="10.0" />
+         </content>
+         <padding>
+            <Insets left="10.0" />
+         </padding>
+      </ScrollPane>
+   </children>
 </AnchorPane>
