--- a/src/main/resources/org/devctr/todo/css/styles.css
+++ b/src/main/resources/org/devctr/todo/css/styles.css
@@ -7,6 +7,15 @@
     -fx-background-color: linear-gradient(to bottom, #2FA93B, #0066FF);
 }
 
+.scroll-pane {
+    -fx-background: none;
+}
+
+.lateral-vbox {
+    -fx-background-radius: 8px;
+    -fx-background-color: rgba(255, 255, 255, 0.7);
+}
+
 .add-button {
     -fx-cursor: "HAND";
     -fx-background-color: #D9D9D9;
@@ -21,9 +30,21 @@
     -fx-spacing: 10px;
     -fx-max-width: 260px;
     -fx-min-width: 250px;
-    -fx-cursor: "HAND";
-    -fx-background-color: white;
+    -fx-background-color: linear-gradient(to left, rgba(45, 160, 58, 0.5), rgba(1, 102, 251, 0.5));
     -fx-background-radius: 10px;
+}
+
+.task-top-hbox {
+    -fx-alignment: center-right;
+}
+
+.delete-button {
+    -fx-min-width: 15px;
+    -fx-min-height: 15px;
+    -fx-text-fill: WHITE;
+    -fx-font-size: 9px;
+    -fx-font-weight: bold;
+    -fx-background-color: linear-gradient(to right, rgb(192, 59, 59, 0.8), rgb(76, 146, 253, 0.8));
 }
 
 .task-name {
@@ -32,8 +53,11 @@
 }
 
 .task-description {
-    -fx-background-color: none;
-    -fx-border-color: none;
+    -fx-max-height: 20px;
+    -fx-font-weight: lighter;
+    -fx-font-size: 10px;
+    -fx-control-inner-background: none;
+    -fx-background: none;
 }
 
 .task-deadline {
