--- a/src/main/resources/org/devctr/todo/fxml/add-task.fxml
+++ b/src/main/resources/org/devctr/todo/fxml/add-task.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="389.0" prefWidth="327.0" styleClass="anchor-pane" stylesheets="@../css/add-task.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.devctr.todo.Controller.AddTask">
+<AnchorPane prefHeight="341.0" prefWidth="327.0" styleClass="anchor-pane" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.devctr.todo.Controller.AddTask">
    <children>
       <VBox layoutX="17.0" layoutY="15.0" prefHeight="304.0" prefWidth="290.0" spacing="10.0" styleClass="vbox">
          <padding>
@@ -73,7 +73,7 @@
             <Separator prefWidth="200.0" />
             <HBox alignment="CENTER" prefHeight="32.0" prefWidth="228.0">
                <children>
-                  <Button fx:id="addTaskButton" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#addButton" prefHeight="24.0" prefWidth="131.0" styleClass="add-task-button" text="Add Task">
+                  <Button fx:id="addTaskButton" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#addTodoButton" prefHeight="24.0" prefWidth="131.0" styleClass="add-task-button" text="Add Task">
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor>
