--- a/src/main/resources/org/devctr/todo/fxml/board.fxml
+++ b/src/main/resources/org/devctr/todo/fxml/board.fxml
@@ -13,14 +13,55 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="body" prefHeight="780.0" prefWidth="1280.0" stylesheets="@../css/styles.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.devctr.todo.Controller.TaskController">
+<AnchorPane prefHeight="780.0" prefWidth="1280.0" styleClass="body" stylesheets="@../css/styles.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.devctr.todo.Controller.TaskController">
    <children>
-      <VBox alignment="TOP_CENTER" layoutY="62.0" prefHeight="657.0" prefWidth="222.0" styleClass="lateral-menu" />
+      <VBox alignment="TOP_CENTER" layoutY="62.0" prefHeight="657.0" prefWidth="222.0" styleClass="lateral-menu">
+         <children>
+            <VBox alignment="TOP_CENTER" prefHeight="659.0" prefWidth="222.0" spacing="30.0">
+               <VBox.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="20.0" />
+               </VBox.margin>
+               <children>
+                  <Label text="Task Manager" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="16.0" />
+                     </font>
+                  </Label>
+                  <ScrollPane prefHeight="502.0" prefWidth="202.0" styleClass="lateral-scroll-pane">
+                     <content>
+                        <VBox alignment="TOP_CENTER" prefHeight="492.0" prefWidth="184.0" spacing="10.0" styleClass="lateral-vbox">
+                           <padding>
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </padding>
+                           <children>
+                              <Label text="Urgent Tasks">
+                                 <font>
+                                    <Font name="System Bold" size="12.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                        </VBox>
+                     </content>
+                     <VBox.margin>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                     </VBox.margin>
+                     <padding>
+                        <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
+                     </padding>
+                  </ScrollPane>
+                  <Label text="By DEVctr" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="13.0" />
+                     </font>
+                  </Label>
+               </children>
+            </VBox>
+         </children></VBox>
       <VBox layoutX="254.0" layoutY="62.0" prefHeight="120.0" prefWidth="983.0" spacing="10.0">
          <children>
             <Label text="Views Options">
                <font>
-                  <Font name="System Bold" size="16.0" />
+                  <Font name="System Bold" size="14.0" />
                </font>
             </Label>
             <HBox alignment="CENTER_LEFT" prefHeight="44.0" prefWidth="973.0" spacing="10.0" style="-fx-background-color: white; -fx-background-radius: 8;">
@@ -28,12 +69,12 @@
                   <Insets bottom="5.0" left="8.0" right="8.0" top="5.0" />
                </padding>
                <children>
-                  <Button mnemonicParsing="false" prefHeight="15.0" prefWidth="60.0" styleClass="options-buttons" text="List">
+                  <Button mnemonicParsing="false" prefHeight="15.0" prefWidth="70.0" styleClass="options-buttons" text="List">
                      <font>
                         <Font size="12.0" />
                      </font>
                   </Button>
-                  <Button mnemonicParsing="false" prefHeight="15.0" prefWidth="60.0" styleClass="options-buttons" text="Board">
+                  <Button mnemonicParsing="false" prefHeight="15.0" prefWidth="70.0" styleClass="options-buttons" text="Board">
                      <font>
                         <Font size="12.0" />
                      </font>
@@ -68,8 +109,6 @@
             <Cursor fx:constant="DEFAULT" />
          </cursor>
       </Button>
-      <VBox fx:id="doingVbox" layoutX="589.0" layoutY="274.0" prefHeight="200.0" prefWidth="280.0" spacing="16.0" />
-      <VBox fx:id="doneVbox" layoutX="930.0" layoutY="274.0" prefHeight="200.0" prefWidth="280.0" spacing="16.0" />
       <Label alignment="CENTER" layoutX="589.0" layoutY="203.0" prefHeight="16.0" prefWidth="280.0" text="In Progress" textAlignment="CENTER">
          <font>
             <Font name="System Bold" size="14.0" />
@@ -93,12 +132,12 @@
             <Cursor fx:constant="DEFAULT" />
          </cursor>
       </Button>
-      <Label alignment="CENTER" layoutX="930.0" layoutY="203.0" prefHeight="16.0" prefWidth="280.0" text="In Progress" textAlignment="CENTER">
+      <Label alignment="CENTER" layoutX="930.0" layoutY="203.0" prefHeight="16.0" prefWidth="280.0" text="Complete" textAlignment="CENTER">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
       </Label>
-      <Button fx:id="add_button_complete" layoutX="930.0" layoutY="229.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="280.0" styleClass="add-button">
+      <Button fx:id="add_button_completed" layoutX="930.0" layoutY="229.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="280.0" styleClass="add-button">
          <font>
             <Font size="10.0" />
          </font>
@@ -116,13 +155,29 @@
             <Cursor fx:constant="DEFAULT" />
          </cursor>
       </Button>
-      <ScrollPane layoutX="245.0" layoutY="274.0" prefHeight="447.0" prefWidth="289.0" style="-fx-background-color: none; -fx-border-color: none;">
+      <ScrollPane layoutX="245.0" layoutY="274.0" prefHeight="447.0" prefWidth="289.0" style="-fx-background-color: none;">
          <content>
-            <VBox fx:id="todoVbox" prefHeight="200.0" prefWidth="260.0" spacing="10.0" />
+            <VBox fx:id="todoVBox" prefHeight="200.0" prefWidth="260.0" spacing="10.0" />
          </content>
          <padding>
             <Insets left="10.0" />
          </padding>
+      </ScrollPane>
+      <ScrollPane layoutX="585.0" layoutY="274.0" prefHeight="447.0" prefWidth="289.0" style="-fx-background-color: none;">
+         <padding>
+            <Insets left="10.0" />
+         </padding>
+         <content>
+            <VBox fx:id="doingVBox" prefHeight="200.0" prefWidth="260.0" spacing="10.0" />
+         </content>
+      </ScrollPane>
+      <ScrollPane layoutX="926.0" layoutY="274.0" prefHeight="447.0" prefWidth="289.0" style="-fx-background-color: none;">
+         <padding>
+            <Insets left="10.0" />
+         </padding>
+         <content>
+            <VBox fx:id="doneVBox" prefHeight="200.0" prefWidth="260.0" spacing="16.0" />
+         </content>
       </ScrollPane>
    </children>
 </AnchorPane>
